[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/fonts/Armstrong.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/fonts/Balbaleo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/logo.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/block_UI_double@2x.png" type="Texture" id=4]
[ext_resource path="res://src/img/fondo menu.jpg" type="Texture" id=5]
[ext_resource path="res://src/img/rompe_sud.png" type="Texture" id=6]
[ext_resource path="res://src/fonts/Anything Better Font by 7NTypes.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Menus/Fin_Juego.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[node name="Fin_Juego" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="fondo menu" type="Sprite" parent="."]
position = Vector2( 641.752, 410.501 )
scale = Vector2( 1.80282, 1.84234 )
texture = ExtResource( 5 )

[node name="rompe_sud" type="Sprite" parent="."]
position = Vector2( 641.671, 461.482 )
scale = Vector2( 0.915147, 0.915147 )
texture = ExtResource( 6 )

[node name="titulo" type="Label" parent="."]
margin_left = 325.991
margin_top = 168.652
margin_right = 966.991
margin_bottom = 252.652
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 10
text = "¡FIN DE JUEGO!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 827.111
margin_top = 313.639
margin_right = 1644.11
margin_bottom = 600.639
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.784314, 0.733333, 0.713726, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 5
text = "Ha terminado 
el juego
satisfactoriamente."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoContainer" parent="." instance=ExtResource( 3 )]
margin_left = -714.275
margin_top = -18.8887
margin_right = 33.7246
margin_bottom = 214.111

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 230.069
margin_top = 651.402
margin_right = 1058.07
margin_bottom = 1043.4
custom_constants/vseparation = 0
custom_constants/hseparation = 30
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volver_Menu" type="TextureButton" parent="GridContainer"]
margin_right = 256.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="GridContainer/Volver_Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
custom_constants/shadow_offset_x = 0
text = "Menú"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ver_Creditos" type="TextureButton" parent="GridContainer"]
margin_left = 286.0
margin_right = 542.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="GridContainer/Ver_Creditos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
text = "Créditos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="TextureButton" parent="GridContainer"]
margin_left = 572.0
margin_right = 828.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="GridContainer/Salir"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
text = "Salir"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GridContainer/Volver_Menu" to="." method="_on_Volver_Menu_pressed"]
[connection signal="pressed" from="GridContainer/Ver_Creditos" to="." method="_on_Ver_Creditos_pressed"]
[connection signal="pressed" from="GridContainer/Salir" to="." method="_on_Salir_pressed"]
